Fix: light theme link contrast - ticket 12072

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,9 +12,7 @@ body {
     font-family: system-ui, sans-serif;
     font-size: 1.1rem;
     line-height: 1.7;
-    //max-width: min(70ch, 100%);
-    margin: auto;
-    //padding: 1.5rem 1rem;
+    //margin: auto;
 }
 
 h1, h2, h3 {
